--- a/automation.yml
+++ b/automation.yml
@@ -1,1 +1,24 @@
-on: push
+name: Docker Image CI
+
+on:
+  push:
+    branches: [ checkpoint4 ]
+  pull_request:
+    branches: [ develop ]
+
+jobs:
+
+  build-container:
+    name: Build Docker container image
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Publish to DockerHub
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{secrets.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
+        repository: cloud_app
+        tags: latest
