--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        registry: docker.pkg.github.com
+        registry: https://ghcr.io
         repository: oakenknight/cloud_app
         tags: latest, ${{ github.run_number }}
     - name: Log in to Docker Hub
