--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -34,5 +34,5 @@ jobs:
       with:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
-        repository: cloud_app
+        repository: oakenknight/cloud_app
         tags: latest
