--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -35,4 +35,4 @@ jobs:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
         repository: oakenknight/cloud_app
-        tags: latest
+        tags: latest, ${{ github.run_number }}
