--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -9,30 +9,49 @@ on:
 jobs:
 
   build-container:
-    name: Build Docker container image
+    # name: Build Docker container image
+    # runs-on: ubuntu-latest
+    # steps:
+    # - name: Checkout code
+    #   uses: actions/checkout@v2
+
+    # - name: Create Github package
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     username: ${{ github.actor }}
+    #     password: ${{ secrets.GITHUB_TOKEN }}
+    #     registry: https://ghcr.io
+    #     repository: oakenknight/cloud_app
+    #     tags: latest, ${{ github.run_number }}
+    # - name: Log in to Docker Hub
+    #   uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+    # - name: Publish to DockerHub
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     username: ${{secrets.DOCKER_USERNAME}}
+    #     password: ${{secrets.DOCKER_PASSWORD}}
+    #     repository: oakenknight/cloud_app
+    #     tags: latest, ${{ github.run_number }}
+    name: Build docker container image
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Create Github package
-      uses: docker/build-push-action@v2
-      with:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: https://ghcr.io
-        repository: oakenknight/cloud_app
-        tags: latest, ${{ github.run_number }}
-    - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Publish to DockerHub
-      uses: docker/build-push-action@v2
-      with:
-        username: ${{secrets.DOCKER_USERNAME}}
-        password: ${{secrets.DOCKER_PASSWORD}}
-        repository: oakenknight/cloud_app
-        tags: latest, ${{ github.run_number }}
+      - name: Checkout 
+        uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/cloud:latest
