--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,6 @@
+events {
+    worker_connections 1024;
+}
 upstream loadbalancer {
 server 172.17.0.1:8000 weight=5;
 server 172.17.0.1:8001 weight=5;
