--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,3 @@
-events {
-    worker_connections 1024;
-}
 upstream loadbalancer {
 server 172.17.0.1:8000 weight=5;
 server 172.17.0.1:8001 weight=5;
@@ -8,4 +5,9 @@ server 172.17.0.1:8001 weight=5;
 server {
 location / {
 proxy_pass http://loadbalancer;
+ proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
 }}
